--- a/client/src/components/events/event/Event.css
+++ b/client/src/components/events/event/Event.css
@@ -46,7 +46,7 @@ h1 {
 .photos {
       width: 90px;
       height: 30px;
-      background-color: #E74C3C;
+      background-color: #00bcd4;
       color: white;
       position: relative;
       top: -30px;
@@ -63,7 +63,7 @@ h1 {
 .txt5 {
       position: relative;
       top: 18px;
-      color: #E74C3C;
+      color: #00bcd4;
       font-size: 23px
 }
 
@@ -124,7 +124,7 @@ h1 {
 }
 
 .fa-gratipay:hover {
-      color: #E74C3C
+      color: #00bcd4
 }
 
 .txt3 {
