--- a/client/src/components/formEvent/FormEvent.css
+++ b/client/src/components/formEvent/FormEvent.css
@@ -34,7 +34,7 @@ form {
 }
 
 form h1 {
-      color: #ff4a56;
+      color: #00bcd4;
       font-weight: 100;
       letter-spacing: 0.01em;
       margin-left: 15px;
@@ -45,14 +45,14 @@ form h1 {
 form button {
       margin-top: 35px;
       background-color: white;
-      border: 1px solid #ff4a56;
+      border: 1px solid #00bcd4;
       line-height: 0;
       font-size: 17px;
       display: inline-block;
       box-sizing: border-box;
       padding: 20px 15px;
       border-radius: 60px;
-      color: #ff4a56;
+      color: #00bcd4;
       font-weight: 100;
       letter-spacing: 0.01em;
       position: relative;
@@ -62,7 +62,7 @@ form button {
 form button:hover,
 form button:focus {
       color: white;
-      background-color: #ff4a56;
+      background-color: #00bcd4;
 }
 
 form .question {
@@ -80,7 +80,7 @@ form .question:last-of-type {
 
 form .question label {
       transform-origin: left center;
-      color: #ff4a56;
+      color: #00bcd4;
       font-weight: 100;
       letter-spacing: 0.01em;
       font-size: 17px;
@@ -88,7 +88,7 @@ form .question label {
       padding: 10px 15px;
       display: block;
       position: absolute;
-      margin-top: -40px;
+      margin-top: -50px;
       z-index: 2;
       pointer-events: none;
 }
@@ -96,7 +96,7 @@ form .question label {
 form .question input[type="text"] {
       appearance: none;
       background-color: none;
-      border: 1px solid #ff4a56;
+      border: 1px solid #00bcd4;
       line-height: 0;
       font-size: 17px;
       width: 100%;
@@ -104,7 +104,7 @@ form .question input[type="text"] {
       box-sizing: border-box;
       padding: 10px 15px;
       border-radius: 60px;
-      color: #ff4a56;
+      color: #00bcd4;
       font-weight: 100;
       letter-spacing: 0.01em;
       position: relative;
@@ -113,7 +113,7 @@ form .question input[type="text"] {
 
 form .question input[type="text"]:focus {
       outline: none;
-      background: #ff4a56;
+      background: #00bcd4;
       color: white;
       margin-top: 30px;
 }
