--- a/client/src/components/profile/Profile.css
+++ b/client/src/components/profile/Profile.css
@@ -1,6 +1,6 @@
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
-      * {
+/*       * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -10,7 +10,7 @@
       body {
             min-height: 100vh;
             background: linear-gradient(to bottom, #000428, #004683)
-      }
+      } */
 
       .container {
             margin-top: 100px
