--- a/client/src/components/login/Login.css
+++ b/client/src/components/login/Login.css
@@ -1,88 +1,147 @@
-.login {
-      width: 320px;
-      height: 420px;
-      border: 2px solid #C3A255;
-      border-radius: 80px 0px 80px 0px;
-      color: #FAFAFA;
-      background-color: rgba(64, 64, 66, 0.8);
-      top: 50%;
-      left: 50%;
-      position: absolute;
-      transform: translate(-50%, -50%);
+* {
       box-sizing: border-box;
-      padding: 68px 28px;
 }
 
-.user {
+@import url("https://fonts.googleapis.com/css?family=Rubik:400,500&display=swap");
 
-      position: absolute;
-      top: -50px;
-      left: 112px;
+body {
+      font-family: "Rubik", sans-serif;
 }
 
-h1 {
+.container {
+      display: flex;
+      height: 100vh;
+}
+
+.left {
+      overflow: hidden;
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      justify-content: center;
+      animation-name: left;
+      animation-duration: 1s;
+      animation-fill-mode: both;
+      animation-delay: 1s;
+}
+
+.right {
+      flex: 1;
+      background-color: black;
+      transition: 1s;
+      background-image: url(https://images.unsplash.com/photo-1550745165-9bc0b252726f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80);
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+}
+
+.header>h2 {
       margin: 0;
-      padding-top: 0;
-      padding-left: 0;
-      padding-bottom: 20px;
-      letter-spacing: 10px;
-      text-transform: uppercase;
-      text-align: center;
-      font-size: 25px;
+      color: #4f46a5;
 }
 
-.login p {
-      margin: 0;
-      padding: 0;
-      font-weight: bold;
+.header>h4 {
+      margin-top: 10px;
+      font-weight: normal;
+      font-size: 15px;
+      color: rgba(0, 0, 0, 0.4);
 }
 
-.login input {
-      width: 100%;
-      margin-bottom: 21px;
+.form {
+      max-width: 80%;
+      display: flex;
+      flex-direction: column;
 }
 
-.login input[type="text"],
-input[type="password"] {
-      border: none;
-      border-bottom: 5px solid #BF9548;
-      background: transparent;
-      outline: none;
-      height: 40px;
-      color: gray;
-      font-size: 16px;
+.form>p {
+      text-align: right;
 }
 
-.login input[type="submit"] {
-      border: none;
-      outline: none;
-      height: 35px;
-      color: gray;
-      background: #FAFAFA;
-      border-radius: 20px;
+.form>p>a {
+      color: #000;
+      font-size: 14px;
+}
+
+.form-field {
+      height: 46px;
+      padding: 0 16px;
+      border: 2px solid #ddd;
+      border-radius: 4px;
+      font-family: "Rubik", sans-serif;
+      outline: 0;
       transition: 0.2s;
+      margin-top: 20px;
 }
 
-.login input[type="submit"]:hover {
-      cursor: pointer;
-      background: #BF9548;
-      transition: 0.2s;
+.form-field:focus {
+      border-color: #0f7ef1;
 }
 
-.login a {
-      font-weight: bold;
-      text-decoration: none;
-      font-size: 12px;
-      line-height: 30px;
-      color: #4b4b4b;
-      transition: 0.1s;
+.form>button {
+      padding: 12px 10px;
+      border: 0;
+      background: linear-gradient(to right, #de48b5 0%, #0097ff 100%);
+      border-radius: 3px;
+      margin-top: 10px;
+      color: #fff;
+      letter-spacing: 1px;
+      font-family: "Rubik", sans-serif;
 }
 
-.login a:hover {
-      transition: 0.2s;
-      color: #BF9548;
+.animation {
+      animation-name: move;
+      animation-duration: 0.4s;
+      animation-fill-mode: both;
+      animation-delay: 2s;
 }
 
-.login img {
-      margin-top: 32px;
+.a1 {
+      animation-delay: 2s;
+}
+
+.a2 {
+      animation-delay: 2.1s;
+}
+
+.a3 {
+      animation-delay: 2.2s;
+}
+
+.a4 {
+      animation-delay: 2.3s;
+}
+
+.a5 {
+      animation-delay: 2.4s;
+}
+
+.a6 {
+      animation-delay: 2.5s;
+}
+
+@keyframes move {
+      0% {
+            opacity: 0;
+            visibility: hidden;
+            transform: translateY(-40px);
+      }
+
+      100% {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0);
+      }
+}
+
+@keyframes left {
+      0% {
+            opacity: 0;
+            width: 0;
+      }
+
+      100% {
+            opacity: 1;
+            padding: 20px 40px;
+            width: 440px;
+      }
 }
